[package]
name = "genres-registry"
version = "1.0.0-dev"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "A registry of music genres to use in a substrate blockchain environment."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
polkadot-sdk = { workspace = true, features = ["sp-runtime"] }

[features]
default = ["std"]
std = ["parity-scale-codec/std", "scale-info/std", "polkadot-sdk/std"]

