[package]
name = "genres-registry"
version = "1.0.0-dev"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "A registry of music genres to use in a substrate blockchain environment."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

[features]
default = ["std"]
std = ["parity-scale-codec/std", "scale-info/std", "frame-support/std"]
