[package]
name = "allfeat-voter-bags"
version = "1.0.0"
authors.workspace = true
edition = "2021"
description = "CLI to generate voter bags for Allfeat runtimes"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }

generate-bags = { workspace = true }
sp-io = { workspace = true }

harmonie-runtime = { path = "../../runtime/harmonie" }