[package]
name = "pallet-evm-precompile-nfts-collections"
description = "A Precompile to expose the Nfts pallet through a Solidity interface to interact with deployed collections."
version = "0.1.0"
edition = "2021"
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-nfts = { workspace = true }
pallet-timestamp = { workspace = true }
parity-scale-codec = { workspace = true, features = ["max-encoded-len"] }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }

# Frontier
pallet-evm-precompile-nfts-types = { workspace = true, default-features = false }
precompile-utils = { workspace = true, default-features = false }
fp-evm = { workspace = true }
pallet-evm = { workspace = true, features = ["forbid-evm-reentrancy"] }

num_enum = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }
serde = { workspace = true }
libsecp256k1 = { workspace = true }
sha3 = { workspace = true }

precompile-utils = { workspace = true, features = ["testing"] }
allfeat-primitives = { workspace = true, features = ["std"] }

pallet-timestamp = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std", "insecure_zero_ed"] }

scale-info = { workspace = true, features = ["derive"] }
sp-runtime = { workspace = true }

pallet-evm-precompile-nfts-tests = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
    "fp-evm/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-nfts/std",
    "pallet-evm/std",
    "parity-scale-codec/std",
    "sp-core/std",
    "sp-io/std",
    "sp-std/std",
    "sp-runtime/std",
    "precompile-utils/std",
    "pallet-evm-precompile-nfts-types/std",
    "log/std",
    "num_enum/std"
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-evm/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-nfts/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]