[package]
name = "pallet-evm-precompile-nfts-tests"
description = "Utils crate for exposing a mock testing Runtime for NFTs precompriles."
version = "0.1.0"
edition = "2021"
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
enumflags2 = { workspace = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-nfts = { workspace = true }
parity-scale-codec = { workspace = true, features = ["max-encoded-len"] }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }

# Frontier
fp-evm = { workspace = true }
pallet-evm = { workspace = true, features = ["forbid-evm-reentrancy"] }
hex-literal = { workspace = true }
serde = { workspace = true }
libsecp256k1 = { workspace = true }
sha3 = { workspace = true }

pallet-timestamp = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std", "insecure_zero_ed"] }

pallet-evm-precompile-nfts-types = { workspace = true, default-features = false }

scale-info = { workspace = true, features = ["derive"] }
sp-runtime = { workspace = true }

[dev-dependencies]

[features]
default = ["std"]
std = [
    "fp-evm/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-nfts/std",
    "pallet-evm/std",
    "parity-scale-codec/std",
    "sp-core/std",
    "sp-io/std",
    "sp-std/std",
    "sp-runtime/std",
    "pallet-evm-precompile-nfts-types/std"
]