[package]
name = "pallet-evm-precompile-nfts-types"
description = "NFTs pallet types helper for encoding and decoding Solidity types."
version = "0.1.0"
edition = "2021"
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-nfts = { workspace = true }
pallet-timestamp = { workspace = true }
parity-scale-codec = { workspace = true, features = ["max-encoded-len"] }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }

# Frontier
precompile-utils = { workspace = true, default-features = false }
fp-evm = { workspace = true }
pallet-evm = { workspace = true, features = ["forbid-evm-reentrancy"] }

num_enum = { workspace = true }

[dev-dependencies]

[features]
default = ["std"]
std = [
    "fp-evm/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-nfts/std",
    "pallet-evm/std",
    "parity-scale-codec/std",
    "sp-core/std",
    "sp-io/std",
    "sp-std/std",
    "sp-runtime/std",
    "precompile-utils/std",
    "num_enum/std",
    "pallet-timestamp/std",
]